--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "testdev-client",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@vue/cli-service": "^4.4.6",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "dateformat": "^3.0.3",
-    "eslint": "^6.8.0",
+    "eslint": "^7.6.0",
     "vue": "^2.6.11",
     "vue-instant-loading-spinner": "^1.0.0",
     "vue-js-modal": "^1.3.31",
