--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "serve": "vue-cli-service serve",
+    "start": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
@@ -14,8 +14,8 @@
     "eslint": "^7.6.0",
     "vue": "^2.6.11",
     "vue-instant-loading-spinner": "^1.0.0",
-    "vue-js-modal": "^1.3.31",
-    "vue-router": "^3.0.7",
+    "vue-js-modal": "^1.3.35",
+    "vue-router": "^3.4.2",
     "vue-template-compiler": "^2.6.11"
   },
   "devDependencies": {},
